# mcp-client-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  claude.sh  pyproject.toml  servers.example.json
.claude-plugin/: marketplace.json  plugin.json
.claude/workflows/: run-eval.js
.github/workflows/: ci.yml  publish.yml
agents/: server-eval-agent.md
codegraph/: codegraph.py  codegraph.shapes.json  result.json  run.py  session-analyzer.md  session-overview.md
context7/: context7.py  context7.shapes.json  result.json  run.py  session-analyzer.md  session-overview.md
deepwiki/: deepwiki.py  deepwiki.shapes.json  result.json  run.py  session-analyzer.md  session-overview.md
doc/: CODEGEN_SKILL_IDEA.md  DISTRIBUTION.md  EVAL_REPORT.md  EXTRACTION_ANALYSIS.md  LANDSCAPE.md  MARKET_RESEARCH.md  RUNNING_LOCALLY.md  USAGE.md  VERDICT.md
eval/codegraph/: codegraph.py  codegraph.shapes.json  codegraph.verify.json  run.py  session-overview.md
eval/context7/: context7.py  context7.shapes.json  context7.verify.json  run.py  session-overview.md
eval/deepwiki/: deepwiki.py  deepwiki.shapes.json  deepwiki.verify.json  run.py  session-overview.md
eval/everything/: everything.py  everything.shapes.json  everything.verify.json  run.py  session-overview.md
eval/fetch/: fetch.py  fetch.shapes.json  fetch.verify.json  run.py  session-overview.md
eval/filesystem/: filesystem.py  filesystem.shapes.json  filesystem.verify.json  run.py  session-overview.md
eval/git/: git.py  git.shapes.json  git.verify.json  run.py  session-overview.md
eval/github/: github.py  github.shapes.json  github.verify.json  run.py  session-overview.md
eval/huggingface/: huggingface.py  huggingface.shapes.json  huggingface.verify.json  run.py  session-overview.md
eval/memory/: memory.py  memory.shapes.json  memory.verify.json  run.py  session-overview.md
eval/sequential-thinking/: run.py  sequential-thinking.py  sequential-thinking.shapes.json  sequential-thinking.verify.json  session-overview.md
eval/sqlite/: run.py  session-overview.md  sqlite.py  sqlite.shapes.json  sqlite.verify.json
eval/time/: run.py  session-overview.md  time.py  time.shapes.json  (+1 more)
eval_harness/: __init__.py  cli.py  gen_config.py  manifest.py  report.py  runner_gen.py  verify.py
everything/: everything.py  everything.shapes.json  result.json  run.py  session-analyzer.md  session-overview.md
fetch/: fetch.py  fetch.shapes.json  result.json  run.py  session-analyzer.md  session-overview.md
filesystem/: filesystem.py  filesystem.shapes.json  result.json  run.py  session-analyzer.md  session-overview.md
git/: git.py  git.shapes.json  result.json  run.py  session-analyzer.md  session-overview.md
github/: github.py  github.shapes.json  result.json  run.py  session-analyzer.md  session-overview.md
huggingface/: huggingface.py  huggingface.shapes.json  result.json  run.py  session-analyzer.md  session-overview.md
mcp_client_kit/: __init__.py  _bridge.py  cli.py  codegen.py  discovery.py  seam.py
mcpgen/: __init__.py  _bridge.py  cli.py  codegen.py  discovery.py  seam.py
memory/: memory.py  memory.shapes.json  result.json  run.py  session-analyzer.md  session-overview.md
sequential-thinking/: result.json  run.py  sequential-thinking.py  sequential-thinking.shapes.json  session-analyzer.md  session-overview.md
servers/: servers.example.toml  servers.toml
sqlite/: result.json  run.py  session-analyzer.md  session-overview.md  sqlite.py  sqlite.shapes.json
tests/: test_bridge.py  test_cli_call.py  test_cli_env.py  test_cli_list.py  test_cli_merge.py  test_cli_probe.py  test_codegen.py  test_config.py  test_discovery.py  test_gen_config.py  test_pre_flight_refresh.py  test_report.py  test_verify.py
time/: result.json  run.py  session-analyzer.md  session-overview.md  time.py  time.shapes.json
workflows/: run-eval.workflow.js
(+10 files in other folders)
