[project]
name = "mcpgen"
version = "0.1.0"
description = "Generate typed Python wrappers for any MCP server (codegen skill + CLI)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sviatoslav Sviridov", email = "sviridov@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    # Upper-bounded: FileTokenStorage + pre-flight refresh in _bridge.py depend on
    # the official mcp SDK's OAuth/auth-flow behavior; a major bump may shift it.
    "mcp[cli]>=1.27,<2",
    "httpx>=0.28",
    "keyring>=24",
]

[project.scripts]
mcpgen = "mcpgen.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/svd/mcpgen"
Source = "https://github.com/svd/mcpgen"
Issues = "https://github.com/svd/mcpgen/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcpgen"]
