[project]
name = "mcp-client-kit"
version = "0.2.0.dev0"
description = "mcp-client-kit — generate typed Python wrappers for any MCP server (codegen skill + CLI)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sviatoslav Sviridov", email = "sviridov@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    # Upper-bounded: FileTokenStorage + pre-flight refresh in _bridge.py depend on
    # the official mcp SDK's OAuth/auth-flow behavior; a major bump may shift it.
    "mcp[cli]>=1.27,<2",
    "httpx>=0.28",
    "keyring>=24",
]

[project.scripts]
mcpgen = "mcpgen.cli:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[project.urls]
Homepage = "https://github.com/svd/mcp-client-kit"
Source = "https://github.com/svd/mcp-client-kit"
Issues = "https://github.com/svd/mcp-client-kit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcpgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["skills/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["mcpgen"]
ignore_missing_imports = true
