[project]
name = "mcp-client-kit-eval"
version = "0.1.0"
description = "Eval framework for the mcp-client-kit generate-mcp-wrappers skill"
authors = [{name = "Sviatoslav Sviridov", email = "sviridov@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "mcp-client-kit>=0.2.0",
]   # mcp-client-kit must be installed separately; see README

[dependency-groups]
dev = ["pytest>=8,<10", "ruff>=0.9", "mypy>=1.14"]

[project.scripts]
eval-kit = "eval_harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
